Handle to process snapshot is leaked if Process32First() fails

XMLWordPrintable

    • b04
    • windows
    • Not verified

      File: src/java.base/windows/native/libjava/ProcessHandleImpl_win.c

      In functions getProcessPids0() and parent0() a process snapshot is obtained with CreateToolhelp32Snapshot() and then iterated with Process32First()/Process32Next().

      If the initial call to Process32First() fails, the handle of the snapshot is not released.

            Assignee:
            Ivan Gerasimov
            Reporter:
            Ivan Gerasimov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: