8207753: Handle to process snapshot is leaked if Process32First() fails

Reviewed-by: rriggs